// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorSubmissionPage renders with error 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    span={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest author
      </h3>
      This form allows you to add new author information. All modifications are transferred to
       
      <ExternalLink
        href="//inspirehep.net/hepnames"
      >
        inspirehep.net/hepnames
      </ExternalLink>
       
      upon approval.
    </Row>
    <Row
      gutter={0}
    >
      <Col>
        <Component
          error={
            Immutable.Map {
              "message": "Submit Error",
            }
          }
          initialFormData={
            Object {
              "bai": undefined,
            }
          }
          onSubmit={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;

exports[`AuthorSubmissionPage renders with initial store state 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    span={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest author
      </h3>
      This form allows you to add new author information. All modifications are transferred to
       
      <ExternalLink
        href="//inspirehep.net/hepnames"
      >
        inspirehep.net/hepnames
      </ExternalLink>
       
      upon approval.
    </Row>
    <Row
      gutter={0}
    >
      <Col>
        <Component
          error={null}
          initialFormData={
            Object {
              "bai": undefined,
            }
          }
          onSubmit={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;

exports[`AuthorSubmissionPage renders with query 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    span={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest author
      </h3>
      This form allows you to add new author information. All modifications are transferred to
       
      <ExternalLink
        href="//inspirehep.net/hepnames"
      >
        inspirehep.net/hepnames
      </ExternalLink>
       
      upon approval.
    </Row>
    <Row
      gutter={0}
    >
      <Col>
        <Component
          error={null}
          initialFormData={
            Object {
              "bai": "P.Carenza.1",
            }
          }
          onSubmit={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;
